# my-scikit

./: .gitignore  README.md  pyproject.toml
clustering/: k_means.py
src/clustering/: k_means.py
src/test/clustering/: test_kmeans.py
src/test/utils/: test_utils_vector.py
src/utils/: utils_vector.py
