[tool.poetry]
name = "my-scikit"
version = "0.1.0"
description = "Projeto de replicacao do scikit-learn"
authors = ["vv <victor.o.tomanik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
